# gradus_scraping

./: .gitignore  Report Analysis of Articles Published in Gradus Journal.docx  main.ipynb  main.py  playground.py  pyproject.toml  requirements.txt  specs.md  utils.py
