[tool.poetry]
name = "gradus-scraping"
version = "0.1.0"
description = ""
authors = ["DanielMuringe <danielmuringe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bs4 = "^0.0.2"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pypdf2 = "^3.0.1"
jupyter = "^1.0.0"
requests = "^2.31.0"
googletrans = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
